fix PMD BooleanInstantiation rule break
addressing:
[Basic Rules.BooleanInstantiation] - Avoid instantiating Boolean objects; reference Boolean.TRUE or Boolean.FALSE or call Boolean.valueOf() instead.