@@ -119,7 +119,7 @@ public class YourRhnAction extends RhnAction {
                 request.setAttribute(key, "y");
             }
         }
-        request.setAttribute(ANY_LISTS_SELECTED, new Boolean(anyListsSelected));
+        request.setAttribute(ANY_LISTS_SELECTED, Boolean.valueOf(anyListsSelected));
         request.setAttribute("legends", "yourrhn");
         return mapping.findForward("default");
     }
