@@ -77,7 +77,7 @@ public class ChannelManagementPermsSetupAction extends RhnListAction {
         request.setAttribute("user", user);
         request.setAttribute("role", "manage");
         request.setAttribute("userIsChannelAdmin",
-                             new Boolean(user.hasRole(RoleFactory.CHANNEL_ADMIN)));
+                             Boolean.valueOf(user.hasRole(RoleFactory.CHANNEL_ADMIN)));
         form.set("selectedChannels", selectedChannels.toArray(new String[0]));
 
         return mapping.findForward("default");
